--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,24 +2,58 @@ files:
   - source: /front/app/translations/en.json
     translation: /front/app/translations/%locale%.json
     update_option: update_without_changes
+    excluded_target_languages:
+      - kl
   - source: /front/app/translations/admin/en.json
     translation: /front/app/translations/admin/%locale%.json
     update_option: update_without_changes
+    excluded_target_languages:
+      - ca
+      - el
+      - kl
+      - it
+      - lb
+      - ro
+      - sr
   - source: /back/config/locales/en.yml
     translation: /back/config/locales/%locale%.yml
     update_option: update_without_changes
+    excluded_target_languages:
+      - kl
   - source: /back/engines/free/email_campaigns/config/locales/en.yml
     translation: /back/engines/free/email_campaigns/config/locales/%locale%.yml
     update_option: update_without_changes
+    excluded_target_languages:
+      - kl
   - source: /back/engines/free/user_confirmation/config/locales/en.yml
     translation: /back/engines/free/user_confirmation/config/locales/%locale%.yml
     update_option: update_without_changes
+    excluded_target_languages:
+      - kl
   - source: /back/engines/free/smart_groups/config/locales/en.yml
     translation: /back/engines/free/smart_groups/config/locales/%locale%.yml
     update_option: update_without_changes
+    excluded_target_languages:
+      - kl
   - source: /back/engines/commercial/idea_assignment/config/locales/en.yml
     translation: /back/engines/commercial/idea_assignment/config/locales/%locale%.yml
     update_option: update_without_changes
+    excluded_target_languages:
+      - ca
+      - el
+      - kl
+      - it
+      - lb
+      - ro
+      - sr
   - source: /back/engines/commercial/flag_inappropriate_content/config/locales/en.yml
     translation: /back/engines/commercial/flag_inappropriate_content/config/locales/%locale%.yml
     update_option: update_without_changes
+    excluded_target_languages:
+      - ca
+      - el
+      - kl
+      - it
+      - lb
+      - ro
+      - sr
