[CL-2638] Make image download work on E2E CI
1. Create e2e tenant with default `localhost` host so there's no need
to use OVERRIDE_HOST in e2e config.

2. Replace `.` with `-` in e2e.front container to make it consistent
with other containers.

3. Rename `OVERRIDE_HOST` to `OVERRIDE_TENANT_HOST` to make
the distinction with `FRONTEND_URI` more clear.

4. Introduce `FRONTEND_URI` to be able to configure remote host to
download images (FE proxies requests to BE).

5. Use AppConfiguration#base_frontend_uri instead of #base_backend_uri
in image uploader, so the images are accessible in browser via FE URL.
So, if you want to demo your local deployment (via ngrok/localtunnel)
you can proxy only FE. Requests to images will be proxied to BE through
FE (see front/internals/webpack/webpack.config.js)

6. Get rid of `CLUSTER_HOST` which is not used anymore.

7. Do not skip previously failing e2e test.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -750,7 +750,7 @@ jobs:
           cd e2e
           docker-compose build
           docker-compose run web bin/rails db:drop db:create db:schema:load
-          docker-compose run web bin/rails "cl2_back:create_tenant[e2e.front,e2etests_template]"
+          docker-compose run web bin/rails "cl2_back:create_tenant[localhost,e2etests_template]"
       - run:
           command: |
             cd e2e
@@ -760,7 +760,7 @@ jobs:
       - run: sleep 280
       - run: |
           cd e2e
-          docker-compose run --name cypress_run front npm run cypress:run -- --config baseUrl=http://e2e.front:3000
+          docker-compose run --name cypress_run front npm run cypress:run -- --config baseUrl=http://e2e-front:3000
       - run:
           command: docker cp cypress_run:/front/cypress/screenshots .
           # If `when: always`, it fails on success with
