--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - "../env_files/back-secret.env"
     environment:
       POSTGRES_HOST: e2e-postgres
-      OVERRIDE_HOST: "e2e.front"
+      FRONTEND_URI: "http://e2e-front:3000"
 
   rabbitmq:
     container_name: e2e-rabbit
@@ -35,7 +35,7 @@ services:
 
   front:
     ipc: "host" #See https://github.com/cypress-io/cypress/issues/350
-    container_name: "e2e.front"
+    container_name: "e2e-front"
     build:
       context: ..
       dockerfile: front/Dockerfile
