[CL-2638] Do not use localhost in attempt to fix failing e2e test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -750,7 +750,7 @@ jobs:
           cd e2e
           docker-compose build
           docker-compose run web bin/rails db:drop db:create db:schema:load
-          docker-compose run web bin/rails "cl2_back:create_tenant[localhost,e2etests_template]"
+          docker-compose run web bin/rails "cl2_back:create_tenant[e2e.front,e2etests_template]"
       - run:
           command: |
             cd e2e
