--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - "../env_files/back-secret.env"
     environment:
       POSTGRES_HOST: e2e-postgres
+      OVERRIDE_TENANT_HOST: "e2e.front"
       FRONTEND_URI: "http://e2e-front:3000"
 
   rabbitmq:
