--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     environment:
       POSTGRES_HOST: e2e-postgres
       OVERRIDE_TENANT_HOST: "e2e.front"
-      FRONTEND_URI: "http://e2e-front:3000"
+      FRONTEND_URI: "http://e2e.front:3000"
 
   rabbitmq:
     container_name: e2e-rabbit
@@ -36,7 +36,7 @@ services:
 
   front:
     ipc: "host" #See https://github.com/cypress-io/cypress/issues/350
-    container_name: "e2e-front"
+    container_name: "e2e.front"
     build:
       context: ..
       dockerfile: front/Dockerfile
