--- a/env_files/back-safe.env
+++ b/env_files/back-safe.env
@@ -5,7 +5,7 @@ POSTGRES_HOST=postgres
 NLP_HOST=cl2-nlp:8000
 RABBITMQ_URI=amqp://guest:guest@rabbitmq:5672
 SEED_SIZE=small
-OVERRIDE_TENANT_HOST=localhost
+OVERRIDE_HOST=localhost
 FRONTEND_URI=http://localhost:3000 # Can be used for e2e tests and demos on ngrok/localtunnel
 TEMPLATE_URL_SUFFIX=.template.citizenlab.co
 TEMPLATE_BUCKET=cl2-tenant-templates
