--- a/back/.rubocop.yml
+++ b/back/.rubocop.yml
@@ -133,6 +133,9 @@ RSpec/EmptyExampleGroup:
   Exclude:
     - '**/spec/acceptance/**/*'
 
+RSpec/ExampleLength:
+  Enabled: false
+
 Metrics/MethodLength:
   CountAsOne: ['array', 'hash', 'heredoc']
   AllowedMethods: ['included', 'prepended', 'extended']
