--- a/front/package.json
+++ b/front/package.json
@@ -170,6 +170,7 @@
     "@types/qs": "6.9.7",
     "@types/quill": "2.0.9",
     "@types/react": "17.x",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dates": "21.8.3",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.6",
