--- a/crowdin.yml
+++ b/crowdin.yml
@@ -5,6 +5,15 @@ files:
   - source: /front/app/translations/admin/en.json
     translation: /front/app/translations/admin/%locale%.json
     update_option: update_without_changes
+    excluded_target_languages:
+      - ca-ES
+      - el-GR
+      - lv-LV
+      - sr-CS
+      - mor-ar
+      - ro-RO
+      - lb-LU
+      - it-IT
   - source: /back/config/locales/en.yml
     translation: /back/config/locales/%locale%.yml
     update_option: update_without_changes
