--- a/crowdin.yml
+++ b/crowdin.yml
@@ -7,6 +7,12 @@ files:
     update_option: update_without_changes
     excluded_target_languages:
       - ca
+      - el
+      - lv
+      - mor
+      - ro
+      - lb
+      - it
   - source: /back/config/locales/en.yml
     translation: /back/config/locales/%locale%.yml
     update_option: update_without_changes
