Better default value for asset host

--- a/env_files/back-safe.env
+++ b/env_files/back-safe.env
@@ -6,7 +6,7 @@ NLP_HOST=cl2-nlp:8000
 RABBITMQ_URI=amqp://guest:guest@rabbitmq:5672
 SEED_SIZE=small
 OVERRIDE_HOST=localhost
-FRONTEND_URI=http://localhost:3000 # Can be used for e2e tests and demos on ngrok/localtunnel
+ASSET_HOST_URI=http://localhost:4000
 TEMPLATE_URL_SUFFIX=.template.citizenlab.co
 TEMPLATE_BUCKET=cl2-tenant-templates
 MEMCACHED_HOST=memcached
