--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     environment:
       POSTGRES_HOST: e2e-postgres
       OVERRIDE_HOST: "e2e.front"
-      FRONTEND_URI: "http://e2e.front:3000"
+      ASSET_HOST_URI: "http://e2e.front:3000" # it's proxied to `API_HOST: e2e-web` by webpack server
 
   rabbitmq:
     container_name: e2e-rabbit
