--- a/front/package.json
+++ b/front/package.json
@@ -224,6 +224,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "moment-locales-webpack-plugin": "1.2.0",
     "moment-timezone-data-webpack-plugin": "1.5.1",
+    "msw": "^1.0.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^3.1.3",
     "react-refresh": "^0.14.0",
