more fixes to return empty string

--- a/env_files/back-safe.env
+++ b/env_files/back-safe.env
@@ -5,7 +5,7 @@ POSTGRES_HOST=postgres
 NLP_HOST=cl2-nlp:8000
 RABBITMQ_URI=amqp://guest:guest@rabbitmq:5672
 SEED_SIZE=small
-OVERRIDE_HOST=localhost
+OVERRIDE_HOST=product.stg.citizenlab.co
 ASSET_HOST_URI=http://localhost:4000
 TEMPLATE_URL_SUFFIX=.template.citizenlab.co
 TEMPLATE_BUCKET=cl2-tenant-templates
