--- a/cl2-component-library/package.json
+++ b/cl2-component-library/package.json
@@ -58,6 +58,7 @@
     "@types/css-mediaquery": "^0.1.3",
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.200",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^17.0.2",
     "@types/react-color": "3.0.10",
     "@types/react-dom": "^17.0.13",
