--- a/cl2-component-library/package.json
+++ b/cl2-component-library/package.json
@@ -56,7 +56,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/css-mediaquery": "^0.1.3",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.200",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^17.0.2",
@@ -78,7 +78,7 @@
     "eslint-plugin-storybook": "^0.6.12",
     "husky": "4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "28.1.3",
+    "jest": "^29.4.3",
     "jest-cli": "^29.6.2",
     "jest-environment-jsdom": "^29.6.4",
     "jest-junit": "^16.0.0",
@@ -100,7 +100,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "storybook": "^7.6.3",
     "storybook-addon-designs": "^6.3.1",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
