--- a/back/.rubocop.yml
+++ b/back/.rubocop.yml
@@ -5,6 +5,7 @@ require:
   - rubocop-rails
   - rubocop-performance
   - rubocop-rspec
+  - ./lib/rubocop/cop/forbidden_app_configuration_method.rb
 
 AllCops:
   NewCops: enable
