--- a/back/Dockerfile.development
+++ b/back/Dockerfile.development
@@ -38,7 +38,7 @@ WORKDIR $INSTALL_PATH
 
 ENV PATH="$PATH:/cl2_back/bin"
 
-COPY back/Gemfile back/Gemfile.* ./
+COPY back/Gemfile back/Gemfile.* back/.ruby-version ./
 COPY back/engines ./engines
 COPY back/lib/citizen_lab.rb ./lib/
 
