--- a/front/package.json
+++ b/front/package.json
@@ -205,6 +205,7 @@
     "babel-plugin-react-intl": "2.4.0",
     "babel-plugin-styled-components": "^2.0.7",
     "chalk": "4.1.2",
+    "chromatic": "^10.2.1",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
