load prompts as erb files

--- a/env_files/back-safe.env
+++ b/env_files/back-safe.env
@@ -17,6 +17,7 @@ DEFAULT_FROM_EMAIL=notifications@citizenlab.co
 ACTION_MAILER_DELIVERY_METHOD=smtp
 SMTP_ADDRESS=mailcatcher
 SMTP_PORT=1025
+AWS_TOXICITY_DETECTION_REGION=us-east-1
 
 # ==== Development experience configuration ====
 SEED_SIZE=small
