Fix types and ignore storybook build log

--- a/front/.gitignore
+++ b/front/.gitignore
@@ -25,6 +25,7 @@ browserstack.err
 .babel-cache/*
 .cache-loader/*
 app/tsconfig.tsbuildinfo
+build-storybook.log
 
 cypress/videos/
 cypress/screenshots/
