--- a/front/package.json
+++ b/front/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@arcgis/core": "^4.28.10",
     "@babel/runtime": "7.x",
     "@citizenlab/cl2-component-library": "file:../cl2-component-library/dist",
     "@craftjs/core": "^0.2.0-beta.5",
