Permit license and add comment

--- a/front/doc/dependency_decisions.yml
+++ b/front/doc/dependency_decisions.yml
@@ -187,3 +187,9 @@
     :why:
     :versions: []
     :when: 2023-10-13 14:01:10.806750000 Z
+- - :permit
+  - MLA
+  - :who:
+    :why:
+    :versions: []
+    :when: 2024-01-31 16:22:31.533727078 Z
