Fix license error

--- a/front/doc/dependency_decisions.yml
+++ b/front/doc/dependency_decisions.yml
@@ -193,3 +193,10 @@
     :why:
     :versions: []
     :when: 2024-01-31 16:22:31.533727078 Z
+- - :license
+  - '@arcgis/core'
+  - MLA
+  - :who:
+    :why:
+    :versions: []
+    :when: 2024-02-01 10:14:52.518099594 Z
