--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,7 +359,7 @@ jobs:
         default: ubuntu
       env_file:
         type: string
-        default: .env-production-benelux
+        default: .env-web
     steps:
       - run: ssh << parameters.ssh_user >>@<< parameters.ssh_host >> -o StrictHostKeyChecking=no "docker run --env-file cl2-deployment/<< parameters.env_file >> citizenlabdotco/back-ee:$CIRCLE_BRANCH bin/rake templates:generate"
 
@@ -1077,7 +1077,7 @@ workflows:
             - slack-dev-notifications-tenant-templates
           <<: *slack-fail-post-step-templates
           ssh_host: $CITIZENLAB_CLUSTER_IP_ADDRESS_EUROPE
-          env_file: ".env-production-benelux"
+          env_file: ".env-web"
       - back-generate-tenant-templates:
           name: "South America"
           context:
@@ -1168,7 +1168,7 @@ workflows:
             - slack-dev-notifications-tenant-templates
           <<: *slack-fail-post-step-templates
           ssh_host: $CITIZENLAB_CLUSTER_IP_ADDRESS_EUROPE
-          env_file: ".env-production-benelux"
+          env_file: ".env-web"
       - back-generate-tenant-templates:
           name: "South America"
           context:
