--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -667,11 +667,13 @@ jobs:
     docker:
       - image: circleci/node:16
     resource_class: large
-    working_directory: ~/citizenlab
+    working_directory: ~/citizenlab/front
     steps:
       - shallow-clone
-      - copy_secrets_from_lastpass
-      # Download and cache dependencies
+      - run: cd .. && sudo .circleci/install_lpass.sh v1.3.5
+      - run: echo $LASTPASS_PASSWORD | LPASS_DISABLE_PINENTRY=1 lpass login ${LASTPASS_EMAIL}
+      - run: cd .. && lpass show --notes 'citizenlab back-secret.env' > env_files/back-secret.env
+      - run: cd .. && lpass show --notes 'citizenlab front-secret.env' > env_files/front-secret.env
       - restore_cache:
           keys:
             - v2-npm-cache-{{ checksum "package-lock.json" }}
@@ -681,7 +683,7 @@ jobs:
             - /root/.npm
           key: v2-npm-cache-{{ checksum "package-lock.json" }}
       - run:
-          command: cd front && npm run chromatic
+          command: npm run chromatic
 
   # E2E TESTS
   e2e-tests:
